# softcam

./: CMakeLists.txt  softcam_without_tests.sln
examples/softcam_installer/: CMakeLists.txt
src/baseclasses/: CMakeLists.txt  amvideo.cpp  streams.h  wxdebug.cpp
src/softcam/: CMakeLists.txt  softcam.cpp  softcam.def  softcam.h
src/softcamcore/: CMakeLists.txt  DShowSoftcam.cpp  DShowSoftcam.h  FrameBuffer.cpp  FrameBuffer.h  SenderAPI.cpp  SenderAPI.h  SoftcamCommon.h
